--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ p {
       }
 
       try {
-        const response = await fetch('http://localhost:3000/scrape', {
+        const response = await fetch('/scrape', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
@@ -233,7 +233,7 @@ p {
       }
 
       try {
-        const response = await fetch('http://localhost:3000/scrape2', {
+        const response = await fetch('/scrape2', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
@@ -267,7 +267,7 @@ p {
       }
 
       try {
-        const response = await fetch('http://localhost:3000/scrape2', {
+        const response = await fetch('/scrape3', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
