--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ p {
       }
 
       try {
-        const response = await fetch('/scrape2', {
+        const response = await fetch('/scrapes', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
@@ -267,7 +267,7 @@ p {
       }
 
       try {
-        const response = await fetch('/scrape3', {
+        const response = await fetch('/scrapess', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
